--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,28 @@
 {
-    "externalTranspiler": "babel",
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
+        "moduleResolution": "node",
         "isolatedModules": false,
         "jsx": "react",
-        "experimentalAsyncFunctions": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "declaration": false,
         "noImplicitAny": false,
+        "noImplicitUseStrict": false,
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true
     },
-    "filesGlob": [
-        "**/*.ts",
-        "**/*.tsx",
-        "!node_modules/**"
+    "exclude": [
+        "node_modules",
+        "typings/browser",
+        "typings/browser.d.ts"
     ],
-    "files": [
-        "app.ts",
-        "lib/testLib.ts"
-    ],
+    "compileOnSave": true,
+    "buildOnSave": false,
     "atom": {
-        "rewriteTsconfig": true
+        "rewriteTsconfig": false
     }
 }
