--- a/package.json
+++ b/package.json
@@ -15,5 +15,27 @@
   "bugs": {
     "url": "https://github.com/TrevorDev/typescriptStart/issues"
   },
-  "homepage": "https://github.com/TrevorDev/typescriptStart#readme"
+  "homepage": "https://github.com/TrevorDev/typescriptStart#readme",
+  "dependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/browserify": "^12.0.30",
+    "@types/express": "^4.0.33",
+    "@types/express-session": "0.0.31",
+    "@types/jade": "0.0.29",
+    "@types/jquery": "^2.0.32",
+    "@types/request": "0.0.31",
+    "@types/request-promise": "^3.0.32",
+    "@types/sequelize": "^4.0.36",
+    "@types/vue": "^1.0.30",
+    "body-parser": "^1.15.2",
+    "browserify": "^13.1.0",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
+    "jade": "^1.11.0",
+    "jquery": "^3.1.1",
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1",
+    "sequelize": "^3.24.3",
+    "vue": "^1.0.27"
+  }
 }
