--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "noImplicitAny": true,
       "module": "commonjs",
       "target": "es6",
+      "strictNullChecks": true,
       "lib": [
         "es6",
         "dom"
