--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/socket.io": "^2.1.2",
     "express": "^4.17.1",
     "nodemon-webpack-plugin": "^4.0.8",
+    "robotjs": "^0.5.1",
     "socket.io": "^2.2.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
