--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon-webpack-plugin": "^4.0.8",
     "robotjs": "^0.5.1",
     "socket.io": "^2.2.0",
+    "three": "^0.106.2",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack-node-externals": "^1.7.2"
