--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.0",
     "@types/socket.io": "^2.1.2",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "robotjs": "^0.5.1",
     "socket.io": "^2.2.0",
