--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "robotjs": "^0.5.1",
     "socket.io": "^2.2.0",
     "three": "^0.106.2",
+    "three-gltf-loader": "^1.106.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack-node-externals": "^1.7.2"
