--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "three-gltf-loader": "^1.106.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6",
     "webpack-node-externals": "^1.7.2"
   }
 }
