--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "@types/express": "^4.17.0",
     "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "robotjs": "^0.5.1",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "three": "^0.106.2",
     "three-gltf-loader": "^1.106.0",
     "ts-loader": "^6.0.4",
