--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --watch --mode=development --info-verbosity=verbose"
+    "start": "webpack --watch --mode=development --info-verbosity=verbose",
+    "startProd": "webpack -p && pm2 start dist/server.js -- -p 3010"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.0",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
+    "commander": "^2.20.0",
     "express": "^4.17.1",
     "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
