--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "dependencies": {
     "@types/express": "^4.17.0",
     "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "commander": "^2.20.0",
     "express": "^4.17.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "socket.io": "^2.2.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6",
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
