--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon-webpack-plugin": "^4.0.8",
     "socket.io": "^2.2.0",
     "ts-loader": "^6.0.4",
+    "twgl.js": "^4.11.1",
     "typescript": "^3.5.3",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
