--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.3.0",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.37.0",
