minor styling and more stability for rtc

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "@types/electron": "^1.6.10",
     "@types/express": "^4.17.0",
+    "@types/jquery": "^3.3.31",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "commander": "^2.20.0",
     "electron": "^7.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.3.0",
