--- a/package.json
+++ b/package.json
@@ -24,19 +24,20 @@
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "commander": "^2.20.0",
-    "electron": "^7.0.0",
+    "electron": "^6.0.11",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "nodemon-webpack-plugin": "^4.0.8",
+    "robotjs": "git+https://github.com/octalmage/robotjs.git#master",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.3.0",
+    "tone": "^13.8.25",
     "ts-loader": "^6.0.4",
+    "twgl.js": "^4.11.1",
     "typescript": "^3.5.3",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
-    "webpack-node-externals": "^1.7.2",
-    "tone": "^13.8.25",
-    "twgl.js": "^4.11.1"
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@types/tone": "git://github.com/Tonejs/TypeScript.git",
