--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/TrevorDev/typescriptStart#readme",
   "dependencies": {
+    "@types/cannon": "^0.1.4",
     "@types/electron": "^1.6.10",
     "@types/express": "^4.17.0",
     "@types/jquery": "^3.3.31",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
+    "cannon": "^0.6.2",
     "commander": "^2.20.0",
     "electron": "^6.0.11",
     "express": "^4.17.1",
