--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "nodemon-webpack-plugin": "^4.0.8",
+    "oimo": "^1.0.9",
     "robotjs": "git+https://github.com/octalmage/robotjs.git#master",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.3.0",
